img overlap fix

--- a/css/style.css
+++ b/css/style.css
@@ -1328,7 +1328,7 @@ footer a {
 
   .home-container .home-img img {
     width: 65%;
-    transform: translate(80px, -180px);
+    transform: translate(100px, -300px);
   }
 
   .home .home-container .info {
